# ezBot

./: .b000027ac3b000081c43a6590e0000  .gitignore  .gitmodules  LICENSE  README.md  ezBot-NoElectronic.CATProduct  ezBot.CATProduct  ezBot.stp  main-skeleton.CATPart
.github/workflows/: main.yml
ENSMASTEEL_librairy/: ENSMASTEEL_librairy.kicad_sym
ENSMASTEEL_librairy/Ensmasteel_librairy.pretty/: SEN-15335.kicad_mod  TMCStick.kicad_mod
actuators_rppico_hardware_interface/: CMakeLists.txt  package.xml
actuators_rppico_hardware_interface/hardware/: actuators_rppico_h_i.cpp
actuators_rppico_hardware_interface/hardware/include/actuators_rppico_h_i/: actuators_rppico_h_i.hpp  rppico_comms.hpp  servo.hpp
docker/: bashrc  build.sh  dockerfile-arm64  dockerfile-x86  entrypoint.sh  run-arm64.sh  run-x86.sh
fasteners/M3/: M3-LockNut.CATPart  M3-nut.CATPart
fasteners/heat-set-inserts/: M3_Insert.CATPart
gazebo/Table2024/: model.config  model.sdf
gazebo/Table3DModel/: Textured2024Table.blend  Textured2024Table.blend1
gazebo/omniRobot_plugin/: CMakeLists.txt
install/: local_setup.sh  setup.sh
log/: latest_build
main_board_v2/: #auto_saved_files#  _autosave-main_board_v2.kicad_sch  fp-info-cache  main_board_v2-B_Cu.gbr  main_board_v2-B_Mask.gbr  main_board_v2-B_Paste.gbr  main_board_v2-B_Silkscreen.gbr  main_board_v2-Edge_Cuts.gbr  main_board_v2-F_Cu.gbr  main_board_v2-F_Mask.gbr  main_board_v2-F_Paste.gbr  main_board_v2-F_Silkscreen.gbr  main_board_v2-NPTH.drl  main_board_v2-PTH.drl  main_board_v2-job.gbrjob  main_board_v2.kicad_pcb  main_board_v2.kicad_prl  main_board_v2.kicad_pro  main_board_v2.kicad_sch  ~main_board_v2.kicad_sch.lck
mobile-base/: .b0000274c4c0000c7864265b21f0000  BatteryReceiverPlate.CATPart  CenterBase.CATProduct  CenterChassis.CATPart  MotorAndWheelAssembly.CATProduct  PropulsionModuleChassis.CATPart
mobile-base/60mm-holonomic-wheel/: .57fd00f68410000a8f9246663010000  60mm-holonomic_wheel.CATProduct  60mm-holonomic_wheel_skeleton.CATPart  OmniwheelHub.CATPart  Plaque_mid_wheel.CATPart  Roller.CATPart  Side_plate.CATPart  Single-wheel.CATProduct
mobile-base/ControlModule/: ControlModule.CATProduct  ControlModuleChassis.CATPart  ControlModuleSkeleton.CATPart  TiretteSensorRetainingClip.CATPart
mobile-base/Electronics/: 1.CATPart  C_0805_2012Metric_Duplicated_1.CATPart  C_Radial_D63mm_H110mm_P250mm.CATPart  DIP-6_W7.62mm_Duplicated_3.CATPart  Electronics_skeleton.CATPart  I3A4W005A150V-001-R.CATPart  JST_B3B_PH_K.CATPart  JST_B4B_PH_K.CATPart  JST_B6B_PH_K.CATPart  LED_0805_2012Metric_Duplicated_6.CATPart  PCBPlaceHolder.CATPart  PCB_assembly.CATProduct  Pin Header - Double - Female - 2.54mm v2.CATPart  Pin Header - Female - 2.54mm v1.CATPart  PinHeader_1x03_P254mm_Vertical.CATPart  PinHeader_1x17_P254mm_Vertical.CATPart  PinHeader_1x20_P254mm_Vertical.CATPart  PinSocket_1x20_P254mm_Vertical.CATPart  Potentiometer_Bourns_3296W_Vertical_Duplicated_7.CATPart  R_1206_3216Metric_Duplicated_5.CATPart  TMC 2130 v1_Duplicated_2.CATPart  XT60 female v5.CATPart  XT60 male v9.CATPart  battery placeHolder.CATPart  main_board_v2 1.57.1.CATPart  main_board_v2 1.57.2.CATPart  main_board_v2 PCB.CATPart  main_board_v2.CATProduct
mobile-base/Rails/: .b000027903500002bda3c6546330000  RailDrillingGuideTestAlignment.CATProduct  RailDrillingTool.CATPart  RailNE.CATPart  RailNW.CATPart  RailSE.CATPart  RailSW.CATPart  RailsCenter.CATProduct  RailsSkeleton.CATPart
mobile-base/Top/: LidarBase.CATPart  LidarSpacer.CATPart  LidarSupport.CATPart  TopCenter.CATProduct  TopCenterChassis.CATPart  top-skeleton.CATPart
omnidrive_rppico/: package.xml
omnidrive_rppico/hardware/: omnibot_pico_system.cpp
pico_stepper_test/: readme.md
reusable-components/aluminium-extrusions/: MakerBeamXL.CATPart  readme.md
reusable-components/steppers/: Nema17.CATPart
rpi-pico/: platformio.ini
rpi-pico-actuators/: platformio.ini
rpi-pico-actuators/src/: main.cpp  servo.cpp  stepper.cpp.old
rpi-pico-propulsion/src/: stepper copy.cpp.old
rpi-pico/src/: main.cpp  stepper.cpp
src/actuators_rppico_hardware_interface/: actuators_rppico_h_i.xml  package.xml
src/ezbot_command_module/: CMakeLists.txt  package.xml
src/ezbot_command_module/include/: tirette.hpp
src/ezbot_command_module/src/: switch_color_node.cpp  tirette_node.cpp
src/ezbot_descr_simul/: CMakeLists.txt  package.xml
src/ezbot_descr_simul/config/: controllers.yaml  joystick.yaml
src/ezbot_descr_simul/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/ezbot_descr_simul/launch/: joystick.launch.py  launch_sim.launch.py  real_robot.launch.py  rsp.launch.py
src/ezbot_desr_simul/: package.xml
src/ezbot_gazebo/: CMakeLists.txt  (+1 more)
src/ldrobot-lidar-ros2/ldlidar_node/: CMakeLists.txt  package.xml
src/ldrobot-lidar-ros2/ldlidar_node/launch/: ldlidar.launch.py  ldlidar_with_mgr.launch.py
src/omnidrive_rppico/: CMakeLists.txt  omnidrive_rppico.xml
src/omnidrive_rppico/hardware/include/omnidrive_rppico/: omnibot_system.hpp
tests/: 4 OmniwheelHublarger.3mf  4xOmniwheelHub.3mf  AluExtrusionNutHolder.stl  BatteryBottomCap.stl  BatteryBottomCapv2.3mf  BatteryBottomCapv2.stl  BatteryCenterSeperator.stl  BatteryCenterSeperatorv2.3mf  BatteryCenterSeperatorv2.stl  BatteryCenterSeperatorv3.3mf  BatteryReceiverPlate.stl  BatteryReceiverPlatev2.stl  CenterChassisv2.3mf  CenterChassisv2.stl  CorrectedBatteryBottomCap.stl  LargerOuterBatteryCase.3mf  LargerOuterBatteryCase.stl  LidarBase.stl  LidarSpacer.stl  LidarSpacerAndBase.3mf  LidarSupport.stl  LongerBatteryBottomCap.stl  OmniwheelHub.stl  OmniwheelHublarger.stl  OuterBatteryCase.stl  OuterBatteryCasev2.stl  OuterBatteryCasev3.stl  Part1.CATPart  PropulsionModuleChassis.stl  PropulsionModuleChassis_6h58m.gcode  RailDrillingTool.stl  RailDrillingToolWithCenterHoles.3mf  RailDrillingToolWithCenterHoles.stl  RailDrillingToolv2.stl  TestNema23-RouesHolonomes.CATProduct  TopCenterChassis.stl  TopCenterChassisRevised.3mf  TopCenterChassisRevised.stl  evenlargerOmniwheelHub.stl  testfitControlModuleChassis.stl  (+2 more)
(+150 files in other folders)
